<resources>
    <string name="app_name">LincedIn</string>
    <string name="facebook_app_id">664930390323248</string>
    <string name="fb_login_protocol_scheme">fb664930390323248</string>
    <string name="action_settings">Configuración</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="section_title_1">Perfil</string>
    <string name="section_title_2">Buscar</string>
    <string name="section_title_3">Contactos</string>
    <string name="section_title_4">Mensajes</string>
    <string name="settings_title">Configuración</string>
    <string name="settings_http">Comunicación con servidor</string>
    <string name="title">Título</string>
    <string name="login_title">Inicio de sesión</string>
    <string name="login_with_lincedin_account">Inicia sesión con tu cuenta de LincedIn</string>
    <string name="login">Iniciar sesión</string>
    <string name="logout">Cerrar sesión</string>
    <string name="email">E-mail</string>
    <string name="user">Usuario</string>
    <string name="user_profile">Perfil de usuario</string>
    <string name="from_user">De :1</string>
    <string name="for_user">Para :1</string>
    <string name="description">Descripción</string>
    <string name="tell_a_little_about_yourself">Cuenta un poco sobre tí</string>
    <string name="write_here">Escribe aquí&#8230;</string>
    <string name="password">Contraseña</string>
    <string name="first_name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="date_of_birth">Fecha de nacimiento</string>
    <string name="confirm_password">Confirma la contraseña</string>
    <string name="company">Compañía</string>
    <string name="institute">Instituto</string>
    <string name="degree">Título</string>
    <string name="position">Posición</string>
    <string name="since">Desde</string>
    <string name="until">Hasta</string>
    <string name="date">Fecha</string>
    <string name="since_date">desde :1</string>
    <string name="since_date_to_date">desde :1 hasta :2</string>
    <string name="start_date_after_end_date">La fecha de inicio es mayor a la fecha de finalización</string>
    <string name="must_spicify_start_date">Debes indicar la fecha de inicio</string>
    <string name="must_spicify_end_date">Debes indicar la fecha de finalización</string>
    <string name="current_work">Trabajo actual</string>
    <string name="currently_studying">Cursando actualmente</string>
    <string name="now">Ahora</string>
    <string name="today">Hoy</string>
    <string name="biography">Biografía</string>
    <string name="recommendations">Recomendaciones</string>
    <string name="recommend_this_user">Recomienda este usuario</string>
    <string name="error_recommend_user">Hubo un error al recomendar al usuario</string>
    <string name="recommendations_received">Recibidas</string>
    <string name="recommendations_made">Hechas</string>
    <string name="no_recommendations">No hay recomendaciones :(</string>
    <string name="age">:1 años</string>
    <string name="location">Ubicación</string>
    <string name="work_experience">Experiencia laboral</string>
    <string name="edit_job">Editar cargo</string>
    <string name="edit_skill">Editar aptitud</string>
    <string name="edit_education">Editar curso</string>
    <string name="add_new_job">Agregar nuevo cargo</string>
    <string name="add_new_skill">Agregar nueva aptitud</string>
    <string name="add_new_education">Agregar nuevo curso</string>
    <string name="delete_job">Eliminar cargo</string>
    <string name="delete_education">Eliminar curso</string>
    <string name="education_was_deleted_successfully">El curso se ha eliminado correctamente</string>
    <string name="job_was_deleted_successfully">El cargo se ha eliminado correctamente</string>
    <string name="skill_was_deleted_successfully">La aptitud se ha eliminado correctamente</string>
    <string name="error_delete_education">Hubo un error y el curso no pudo ser eliminado</string>
    <string name="error_delete_job">Hubo un error y el cargo no pudo ser eliminado</string>
    <string name="error_delete_skill">Hubo un error y la aptitud no pudo ser eliminada</string>
    <string name="education_was_added_successfully">El curso ha sido agregado correctamente</string>
    <string name="job_was_added_successfully">El cargo ha sido agregado correctamente</string>
    <string name="skill_was_added_successfully">La aptitud ha sido agregada correctamente</string>
    <string name="error_add_education">Hubo un error y el curso no pudo ser agregado</string>
    <string name="error_add_job">Hubo un error y el cargo no pudo ser agregado</string>
    <string name="error_add_skill">Hubo un error y la aptitud no pudo ser agregada</string>
    <string name="education_was_edited_successfully">El curso ha sido editado correctamente</string>
    <string name="job_was_edited_successfully">El cargo ha sido editado correctamente</string>
    <string name="skill_was_edited_successfully">La aptitud ha sido editada correctamente</string>
    <string name="error_edit_education">Hubo un error y el curso no pudo ser editado</string>
    <string name="error_edit_job">Hubo un error y el cargo no pudo ser editado</string>
    <string name="error_edit_skill">Hubo un error y la aptitud no pudo ser editada</string>
    <string name="error_retrieving_recommendations">Hubo un error y no se pudieron cargar las recomendaciones</string>
    <string name="are_you_sure_you_want_to_delete_job">¿Estás seguro de que quieres eliminar este cargo?</string>
    <string name="are_you_sure_you_want_to_delete_education">¿Estás seguro de que quieres eliminar este curso?</string>
    <string name="are_you_sure_you_want_to_delete_skill">¿Estás seguro de que quieres eliminar esta aptitud?</string>
    <string name="this_change_cannot_be_reverted">Este cambio no puede ser revertido</string>
    <string name="must_select_job_position">Debes seleccionar una posición para el trabajo</string>
    <string name="must_select_skill">Debes seleccionar una aptitud</string>
    <string name="education">Educación</string>
    <string name="skills">Aptitudes</string>
    <string name="skill">Aptitud</string>
    <string name="name">Nombre</string>
    <string name="category">Categoría</string>
    <string name="see_more">Ver más</string>
    <string name="add">Agregar</string>
    <string name="error_occurred">Ocurrió un error</string>
    <string name="couldnt_retrieve_user_profile">No se pudo obtener el perfil de usuario</string>
    <string name="couldnt_retrieve_chats">No se pudieron obtener las conversaciones</string>
    <string name="user_not_logged_in">El usuario no ha iniciado sesión</string>
    <string name="user_already_logged_in">El usuario ya ha iniciado sesión</string>
    <string name="user_profile_see_recomendations">Ver recomendaciones</string>
    <string name="user_profile_currently_works_at">Trabaja actualmente en</string>
    <string name="click_to_try_again">Clickea para intentar nuevamente</string>
    <string name="error_update_biography">Hubo un error al actualizar la biografía</string>
    <string name="or">ó</string>
    <string name="signup_title">Crea tu cuenta</string>
    <string name="signup_submit_button">Crear cuenta</string>
    <string name="field_is_required">El campo es requerido</string>
    <string name="invalid_email">El e-mail es inválido</string>
    <string name="passwords_do_not_match">Las contraseñas no coinciden</string>
    <string name="error_create_account">Hubo un error al crear la cuenta de usuario</string>
    <string name="account_successfully_created">La cuenta fue creada exitosamente</string>
    <string name="login_has_account_question">¿No tienes una cuenta?</string>
    <string name="error_login">Hubo un error al iniciar sesión</string>
    <string name="local">Local</string>
    <string name="remote">Remoto</string>
    <string name="http_configuration_dialog_title">Configuración HTTP</string>
    <string name="http_configuration_dialog_description">Indique la dirección del servidor al cual se le enviarán las consultas HTTP</string>
    <string name="http_configuration_dialog_local_ip_text_view">IP</string>
    <string name="http_configuration_dialog_port_text_view">Puerto</string>
    <string name="http_configuration_dialog_saved_toast">La configuración ha sido guardada</string>
    <string name="copied_to_clipboard">Copiado al portapapeles</string>
    <string name="send_email">Enviar e-mail</string>
    <string name="check_your_network_connection">Chequea tu conexión a la red</string>
    <string name="message">Mensaje</string>
    <string name="last_message">Último mensaje</string>
    <string name="key_value">:1: :2</string>
    <string name="no_chats">No hay conversaciones :(</string>
    <string name="say_hello_to_user">¡Saluda a :1!</string>
    <string name="chat">Conversación</string>
    <string name="you">Tú</string>
    <string name="cannot_be_empty">No puede estar vacío</string>
    <string name="pick_image_intent_text">Tomar imagen de</string>
</resources>