<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="wrap_content" android:layout_width="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/work_experience_row_company_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/company"/>


            <TextView
                    android:id="@+id/work_experience_row_position_name_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/position"/>

            <TextView
                android:id="@+id/work_experience_row_position_category_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="12sp"
                android:textColor="@color/colorPrimaryLight"
                android:textStyle="bold"
                android:text="@string/category"/>

            <TextView
                android:id="@+id/work_experience_row_position_description_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:text="@string/description"/>

            <TextView
                android:id="@+id/work_experience_row_date_range_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="@color/grey"
                android:text="@string/since_date_to_date"/>

        </LinearLayout>

</FrameLayout>