<android.support.v7.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true"
    android:layout_marginBottom="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginLeft="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/biography"/>

        <View
            style="@style/ThinVerticalSeparator" />

        <TextView
            android:id="@+id/user_profile_biography_fullname_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="14sp"
            android:text="@string/user"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/user_profile_biography_age_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="14sp"
                android:text="@string/age"/>

            <TextView
                android:id="@+id/user_profile_biography_date_of_birth_textview"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/grey"
                android:text="@string/date_of_birth"/>

        </LinearLayout>

        <TextView
            android:id="@+id/user_profile_biography_email_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="14sp"
            android:textColor="@color/colorAccent"
            android:text="@string/email"/>

    </LinearLayout>

</android.support.v7.widget.CardView>