<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorPrimary"
    app:cardElevation="2dp"
    android:layout_margin="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginRight="16dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_work"
            android:contentDescription="User picture" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/user_profile_currently_works_at"/>

            <TextView
                android:id="@+id/user_profile_current_job_company_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/colorPrimaryLight"
                android:text="@string/company"/>

            <TextView
                android:id="@+id/user_profile_current_job_position_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:text="@string/position"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/user_profile_current_job_since_date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="4dp"
        android:textSize="14sp"
        android:textColor="@color/colorPrimaryLight"
        android:text="@string/since_date"/>

</android.support.v7.widget.CardView>