<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/chat_row_username_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/user"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/chat_row_last_message_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="14sp"
                android:text="@string/last_message"/>

            <TextView
                android:id="@+id/chat_row_date_last_message_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="italic"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/lightGrey"
                android:text="@string/date"/>

        </LinearLayout>

</FrameLayout>