<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fiuba.tallerii.lincedin.fragments.ErrorFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="12dp"
        android:visibility="gone">
        <TextView
            android:id="@+id/fragment_error_inform_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:text="@string/couldnt_retrieve_user_profile"/>
        <TextView
            android:id="@+id/fragment_error_check_internet_textview"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragment_error_inform_textview"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/check_your_network_connection"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@id/fragment_error_check_internet_textview"
            android:layout_margin="8dp"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/click_to_try_again"/>
    </RelativeLayout>

</FrameLayout>
